# easydot

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml  update-vendor.yml
scripts/: update_vendor.sh
src/easydot/: __init__.py  _cli.py  _html.py  _server.py  _version.py
src/easydot/assets/: __init__.py  index.js  package.json
tests/: test_easydot.py
